--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -31,10 +31,11 @@ nav{
 
                 button{
                     padding: 10px;
+                    border-radius: 5px;
+                    border: 1px solid black;
 
                     img{
-                        width: 20px;
-                        vertical-align: middle;
+                        @include small-logo-button;
                     }
                 }
             }
@@ -57,6 +58,14 @@ nav{
 
         h1{
             padding-bottom: 10px;
+        }
+
+        .container-button-blue{
+            @include my-container-button-blue;
+        }
+
+        .text-email{
+            font-size: 13px;
         }
     }
 
