--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -24,7 +24,6 @@ nav{
                 padding-right: 15px;
 
                 a{
-                    text-decoration: none;
                     color: black;
                     font-weight: 600;
                 }
@@ -51,6 +50,7 @@ nav{
 .jumbotron{
     padding: 30px 0;
     @include my-display-flex;
+    flex-wrap: wrap;
 
 
     .motto-jumbotron{
@@ -82,5 +82,13 @@ nav{
 
     nav .burger_menu{
         display: block;
+    }
+
+    .jumbotron .motto-jumbotron{
+        width: 100%;
+    }
+
+    .jumbotron .sfondo-jumbotron{
+        width: 100%;
     }
 }
