--- a/src/partials/_content.scss
+++ b/src/partials/_content.scss
@@ -1,4 +1,5 @@
 main{
+    //prima sezione
     #scopo{
         background-color: $primary-color;
         padding: 30px 0;
@@ -43,17 +44,74 @@ main{
         }
     }
 
+    //seconda sezione
     #attivita{
         padding: 30px 0;
 
-        .attivita-screen{
-            width: calc( 100% / 2 );
-            float: left;
-        }
+        .single-row{
+            @include my-display-flex;
+
+            .attivita-screen{
+                width: calc( 100% / 2 );
+            }
         
-        .attivita-text{
-            width: calc( ( 100% / 2 ) / 2);
-            float: left;
+            .attivita-text{
+                width: calc( ( 100% / 2 ) / 2);
+            }
+
+            .title-attivita-text{
+                padding-bottom: 30px;
+            }
+
+            .link-attivita-text{
+                padding: 15px 0;
+            }
+        }
+
+        .right{
+            justify-content: flex-end;
+        }
+    }
+    
+    #feedback{
+        background-color: $primary-color;
+        padding: 30px;
+        text-align: center;
+
+        h2 {
+            font-size: 30px;
+
+           img{
+                width: 30px;
+            } 
+        }
+
+        .fondatori{
+            width: 60%;
+            max-width: 800px;
+            background-color: white;
+            margin: auto;
+            text-align: left;
+            padding: 10px;
+            border-radius: 5px;
+            border: 1px solid black;
+
+            .padding-bottom{
+                padding-bottom: 15px;
+            }
+
+            .foto-fondatori{
+                @include my-display-flex;
+
+                img{
+                    width: 50px;
+                    margin-right: 15px;
+                }
+            }
+        }
+        .container-button-blue{
+            @include my-container-button-blue;
+            justify-content: center;
         }
     }
 }
@@ -62,6 +120,7 @@ main{
 
 
     main{
+        //prima sezione
         #scopo{
             .scopo-center{
                 flex-wrap: wrap;
@@ -75,6 +134,22 @@ main{
                     max-width: 30%;
                     height: auto;
                     }
+                }
+            }
+        }
+
+        //seconda sezione
+        #attivita{
+            .single-row{
+                flex-wrap: wrap;
+                .attivita-screen{
+                    width: 100%;
+                }
+            
+                .attivita-text{
+                    width: calc( 100% / 2 );
+                    text-align: center;
+                    margin: auto;
                 }
             }
         }
